--- a/kab-kota/susun/create.html
+++ b/kab-kota/susun/create.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Project RTK | SIRENATA - Sistem Informasi Rencana Tenaga Kerja Nasional</title>
+    <title>Tambah Proyek RTK | SIRENATA - Sistem Informasi Rencana Tenaga Kerja Nasional</title>
     <link rel="icon" type="image/png" href="../../assets/logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -79,7 +79,7 @@
                         <p class="text-sm font-medium">Budi Santoso</p>
                     </div>
                     <ul class="p-2 text-sm">
-                        <!-- Menu Profile -->
+                        <!-- Menu Profil -->
                         <li><a href="./user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a></li>
                         <li><a href="/auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a></li>
                     </ul>
@@ -120,7 +120,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M10 6H5a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-5m-4 0V5a2 2 0 1 1 4 0v1m-4 0a2 2 0 1 0 4 0m-5 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 0 0-2.83 2M15 11h3m-3 4h2" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Project</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Proyek</span>
                     </a>
                 </li>
                 <li>
@@ -163,7 +163,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M9 17h6l3 3v-3h2V9h-2M4 4h11v8H9l-3 3v-3H4V4Z" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Report User</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Laporan Pengguna</span>
                     </a>
                 </li>
                 <li>
@@ -188,7 +188,7 @@
 
             <!-- Breadcrumb -->
             <nav class="flex mb-6" aria-label="Breadcrumb">
-                <ol class="inline-flex items-center space-x-1 md:space-x-3">
+                <ol class="inline-flex items-center space-x-1">
                     <li class="inline-flex items-center">
                         <a href="../index.html"
                             class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
@@ -197,7 +197,6 @@
                                     d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z">
                                 </path>
                             </svg>
-                            Home
                         </a>
                     </li>
                     <li>
@@ -208,7 +207,7 @@
                                     clip-rule="evenodd"></path>
                             </svg>
                             <a href="./index.html"
-                                class="ml-1 text-sm font-medium text-gray-700 hover:text-indigo-600 md:ml-2">Project</a>
+                                class="ml-1 text-sm font-medium text-gray-700 hover:text-indigo-600 md:ml-2">Proyek</a>
                         </div>
                     </li>
                     <li>
@@ -218,7 +217,7 @@
                                     d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                                     clip-rule="evenodd"></path>
                             </svg>
-                            <span class="ml-1 text-sm font-medium text-gray-500 md:ml-2">Create Project</span>
+                            <span class="ml-1 text-sm font-medium text-gray-500 md:ml-2">Tambah Proyek</span>
                         </div>
                     </li>
                 </ol>
@@ -227,15 +226,15 @@
             <!-- Form Card -->
             <div class="bg-white rounded-lg shadow-sm p-8 max-w-2xl mx-auto">
                 <div class="mb-6">
-                    <h1 class="text-2xl font-bold text-gray-900">Create New RTK Project</h1>
-                    <p class="text-gray-600 mt-1">Buat project RTK baru dengan mengisi form di bawah ini</p>
+                    <h1 class="text-2xl font-bold text-gray-900">Tambah New RTK Proyek</h1>
+                    <p class="text-gray-600 mt-1">Buat proyek RTK baru dengan mengisi form di bawah ini</p>
                 </div>
 
-                <form id="createProjectForm" class="space-y-6">
-                    <!-- Nama Project -->
+                <form id="createProyekForm" class="space-y-6">
+                    <!-- Nama Proyek -->
                     <div>
                         <label for="projectName" class="block text-sm font-medium text-gray-700 mb-2">
-                            Nama Project <span class="text-red-500">*</span>
+                            Nama Proyek <span class="text-red-500">*</span>
                         </label>
                         <input type="text" id="projectName" name="projectName" required
                             class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
@@ -272,7 +271,7 @@
                     <div class="flex gap-4 pt-4">
                         <a href="./index.html"
                             class="flex-1 bg-gray-200 text-gray-700 px-6 py-3 rounded-lg font-medium hover:bg-gray-300 transition-colors text-center">
-                            Cancel
+                            Batal
                         </a>
                         <button type="submit"
                             class="flex-1 bg-indigo-600 text-white px-6 py-3 rounded-lg font-medium hover:bg-indigo-700 transition-colors">
@@ -280,7 +279,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M5 13l4 4L19 7" />
                             </svg>
-                            Submit
+                            Tambah
                         </button>
                     </div>
                 </form>
@@ -302,7 +301,7 @@
                 const sidebarToggleBtn = document.querySelector('[data-drawer-toggle="top-bar-sidebar"]');
                 const sidebar = document.getElementById('top-bar-sidebar');
 
-                // Create backdrop element
+                // Tambah backdrop element
                 const backdrop = document.createElement('div');
                 backdrop.className = 'fixed inset-0 bg-gray-900 bg-opacity-50 z-30 hidden';
                 backdrop.id = 'sidebar-backdrop';
@@ -363,7 +362,7 @@
                 });
 
                 // Form submission handler
-                document.getElementById('createProjectForm').addEventListener('submit', function (e) {
+                document.getElementById('createProyekForm').addEventListener('submit', function (e) {
                     e.preventDefault();
 
                     const projectName = document.getElementById('projectName').value;
@@ -375,7 +374,7 @@
                     }
 
                     // Show success message
-                    alert(`Project berhasil dibuat!\n\nNama Project: ${projectName}\nKetua Tim: ${teamLeader}\n\nCatatan: Dalam implementasi nyata, data akan disimpan ke database.`);
+                    alert(`Proyek berhasil dibuat!\n\nNama Proyek: ${projectName}\nKetua Tim: ${teamLeader}\n\nCatatan: Dalam implementasi nyata, data akan disimpan ke database.`);
 
                     // Redirect back to list page
                     window.location.href = './index.html';
