--- a/kab-kota/susun/index.html
+++ b/kab-kota/susun/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project RTK | SIRENATA - Sistem Informasi Rencana Tenaga Kerja Nasional</title>
+    <title>Proyek RTK | SIRENATA - Sistem Informasi Rencana Tenaga Kerja Nasional</title>
     <link rel="icon" type="image/png" href="../../assets/logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -203,7 +203,7 @@
                         <p class="text-sm font-medium">Budi Santoso</p>
                     </div>
                     <ul class="p-2 text-sm">
-                        <!-- Menu Profile -->
+                        <!-- Menu Profil -->
                         <li><a href="./user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a></li>
                         <li><a href="/auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a></li>
                     </ul>
@@ -244,7 +244,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M10 6H5a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-5m-4 0V5a2 2 0 1 1 4 0v1m-4 0a2 2 0 1 0 4 0m-5 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 0 0-2.83 2M15 11h3m-3 4h2" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Project</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Proyek</span>
                     </a>
                 </li>
                 <li>
@@ -287,7 +287,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M9 17h6l3 3v-3h2V9h-2M4 4h11v8H9l-3 3v-3H4V4Z" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Report User</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Laporan Pengguna</span>
                     </a>
                 </li>
                 <li>
@@ -307,12 +307,12 @@
     </aside>
 
     <!-- Main Content -->
-    <div class="sm:ml-64 mt-14">
-        <div class="p-4 md:p-6">
+    <div class="p-4 sm:ml-64 mt-14">
+        <div class="p-6">
 
             <!-- Breadcrumb -->
             <nav class="flex mb-4 md:mb-6 overflow-x-auto" aria-label="Breadcrumb">
-                <ol class="inline-flex items-center space-x-1 md:space-x-3">
+                <ol class="inline-flex items-center space-x-1">
                     <li class="inline-flex items-center">
                         <a href="../index.html"
                             class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
@@ -321,7 +321,6 @@
                                     d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z">
                                 </path>
                             </svg>
-                            Home
                         </a>
                     </li>
                     <li>
@@ -331,7 +330,8 @@
                                     d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
                                     clip-rule="evenodd"></path>
                             </svg>
-                            <span class="ml-1 text-sm font-medium text-gray-500 md:ml-2">Project</span>
+                            <a href="./index.html"
+                                class="ml-1 text-sm font-medium text-gray-700 hover:text-indigo-600 md:ml-2">Proyek</a>
                         </div>
                     </li>
                 </ol>
@@ -340,13 +340,13 @@
             <!-- DataTable Card -->
             <div class="bg-white rounded-lg shadow-sm p-4 md:p-6">
                 <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center gap-3 mb-4">
-                    <h2 class="text-lg font-semibold text-gray-900">Daftar Project RTKD</h2>
+                    <h2 class="text-lg font-semibold text-gray-900">Daftar Proyek RTKD</h2>
                     <a href="./create.html"
                         class="inline-flex items-center justify-center px-4 py-2 bg-indigo-600 text-white text-sm font-medium rounded-lg hover:bg-indigo-700 transition-colors">
                         <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
                         </svg>
-                        Create Project
+                        Tambah Proyek
                     </a>
                 </div>
                 <table id="projectsTable" class="display" style="width:100%">
@@ -406,7 +406,7 @@
         const sidebarToggleBtn = document.querySelector('[data-drawer-toggle="top-bar-sidebar"]');
         const sidebar = document.getElementById('top-bar-sidebar');
 
-        // Create backdrop element
+        // Tambah backdrop element
         const backdrop = document.createElement('div');
         backdrop.className = 'fixed inset-0 bg-gray-900 bg-opacity-50 z-30 hidden';
         backdrop.id = 'sidebar-backdrop';
@@ -474,7 +474,7 @@
         }
 
 
-        // RTKD Projects Data for Kab/Kota - One RTKD per period (newest first)
+        // RTKD Proyeks Data for Kab/Kota - One RTKD per period (newest first)
         const projectsData = [
             { name: 'RTKD Kota Jakarta Barat 2025-2029', period: '2025-2029', leader: 'Ir. Agus Prasetyo', created: '2024-03-01', completed: '2029-12-31', duration: '60 bulan' },
             { name: 'RTKD Kota Jakarta Barat 2020-2024', period: '2020-2024', leader: 'Dra. Ani Widiastuti', created: '2019-04-10', completed: '2024-12-31', duration: '60 bulan' },
@@ -485,16 +485,16 @@
         ];
 
         // Transform data for DataTable
-        const tableData = projectsData.map((project, index) => {
-            const progress = calculateProgress(project.period);
+        const tableData = projectsData.map((proyek, index) => {
+            const progress = calculateProgress(proyek.period);
             const progressClass = progress === 100 ? '' : 'incomplete';
 
             return [
-                project.name,
-                project.created,
-                project.completed,
-                project.duration,
-                project.leader,
+                proyek.name,
+                proyek.created,
+                proyek.completed,
+                proyek.duration,
+                proyek.leader,
                 `<div class="flex items-center gap-2">
                     <div class="progress-bar" style="width: 80px;">
                         <div class="progress-bar-fill ${progressClass}" style="width: ${progress}%"></div>
@@ -508,14 +508,14 @@
                         </svg>
                     </button>
                     <div class="dropdown-content" id="dropdown-${index}">
-                        <a href="javascript:void(0)" onclick="viewProject('${project.name}')">
+                        <a href="javascript:void(0)" onclick="viewProyek('${proyek.name}')">
                             <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"/>
                             </svg>
                             Lihat
                         </a>
-                        <a href="javascript:void(0)" onclick="editProject(${index + 1}, '${project.name}')">
+                        <a href="javascript:void(0)" onclick="editProyek(${index + 1}, '${proyek.name}')">
                             <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"/>
                             </svg>
@@ -535,9 +535,9 @@
                 language: {
                     search: "Cari:",
                     lengthMenu: "Tampilkan _MENU_ data per halaman",
-                    info: "Menampilkan _START_ sampai _END_ dari _TOTAL_ project",
-                    infoEmpty: "Menampilkan 0 sampai 0 dari 0 project",
-                    infoFiltered: "(difilter dari _MAX_ total project)",
+                    info: "Menampilkan _START_ sampai _END_ dari _TOTAL_ proyek",
+                    infoEmpty: "Menampilkan 0 sampai 0 dari 0 proyek",
+                    infoFiltered: "(difilter dari _MAX_ total proyek)",
                     paginate: {
                         first: "Pertama",
                         last: "Terakhir",
@@ -552,8 +552,8 @@
             });
         });
 
-        // View project function - opens modal with PDF
-        function viewProject(projectName) {
+        // View proyek function - opens modal with PDF
+        function viewProyek(projectName) {
             const modal = document.getElementById('pdfModal');
             const modalTitle = document.getElementById('modalTitle');
             const pdfFrame = document.getElementById('pdfFrame');
@@ -564,9 +564,9 @@
             document.body.style.overflow = 'hidden';
         }
 
-        // Edit project function
-        function editProject(id, projectName) {
-            alert(`Edit Project:\nID: ${id}\nNama: ${projectName}\n\nFungsi ini akan mengarah ke halaman edit.`);
+        // Edit proyek function
+        function editProyek(id, projectName) {
+            alert(`Edit Proyek:\nID: ${id}\nNama: ${projectName}\n\nFungsi ini akan mengarah ke halaman edit.`);
         }
 
         // Toggle dropdown menu
