--- a/pusat/notifikasi/index.html
+++ b/pusat/notifikasi/index.html
@@ -115,7 +115,7 @@
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M10 6H5a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-5m-4 0V5a2 2 0 1 1 4 0v1m-4 0a2 2 0 1 0 4 0m-5 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 0 0-2.83 2M15 11h3m-3 4h2" />
                         </svg>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Project</span>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Proyek</span>
                     </a>
                 </li>
 
@@ -190,12 +190,12 @@
     </aside>
 
     <!-- Main Content -->
-    <div class="sm:ml-64 mt-14">
-        <div class="p-4 md:p-6">
+    <div class="p-4 sm:ml-64 mt-14">
+        <div class="p-6">
 
             <!-- Breadcrumb -->
             <nav class="flex mb-4 md:mb-6 overflow-x-auto" aria-label="Breadcrumb">
-                <ol class="inline-flex items-center space-x-1 md:space-x-3">
+                <ol class="inline-flex items-center space-x-1">
                     <li class="inline-flex items-center">
                         <a href="../index.html"
                             class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
@@ -204,7 +204,6 @@
                                     d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z">
                                 </path>
                             </svg>
-                            Home
                         </a>
                     </li>
                     <li>
@@ -261,7 +260,7 @@
                                     </div>
                                 </div>
                                 <div class="flex-1 min-w-0">
-                                    <p class="text-sm font-semibold text-gray-900 mb-1">Project RTKN Nasional 2025-2030
+                                    <p class="text-sm font-semibold text-gray-900 mb-1">Proyek RTKN Nasional 2025-2030
                                         Disetujui</p>
                                     <p class="text-sm text-gray-600 mb-2">Project Anda telah disetujui oleh Admin Pusat
                                         dan siap untuk dilanjutkan.</p>
@@ -313,7 +312,7 @@
                                 <div class="flex-1 min-w-0">
                                     <p class="text-sm font-semibold text-gray-900 mb-1">Dr. Ahmad Wijaya Ditambahkan
                                         sebagai Tim</p>
-                                    <p class="text-sm text-gray-600 mb-2">Anggota baru telah ditambahkan ke Project RTKN
+                                    <p class="text-sm text-gray-600 mb-2">Anggota baru telah ditambahkan ke Proyek RTKN
                                         Sektor Industri Manufaktur.</p>
                                     <p class="text-xs text-gray-500">5 jam yang lalu</p>
                                 </div>
@@ -338,7 +337,7 @@
                                 <div class="flex-1 min-w-0">
                                     <p class="text-sm font-semibold text-gray-900 mb-1">Deadline RTKN Kesehatan
                                         Diperpanjang</p>
-                                    <p class="text-sm text-gray-600 mb-2">Deadline untuk Project RTKN Sektor Kesehatan
+                                    <p class="text-sm text-gray-600 mb-2">Deadline untuk Proyek RTKN Sektor Kesehatan
                                         diperpanjang hingga 15 Januari 2025.</p>
                                     <p class="text-xs text-gray-500">1 hari yang lalu</p>
                                 </div>
@@ -382,7 +381,7 @@
                                 <div class="flex-1 min-w-0">
                                     <p class="text-sm font-semibold text-gray-900 mb-1">Peringatan: RTKN Konstruksi
                                         Segera Berakhir</p>
-                                    <p class="text-sm text-gray-600 mb-2">Deadline untuk Project RTKN Sektor Konstruksi
+                                    <p class="text-sm text-gray-600 mb-2">Deadline untuk Proyek RTKN Sektor Konstruksi
                                         kurang dari 7 hari lagi.</p>
                                     <p class="text-xs text-gray-500">30 menit yang lalu</p>
                                 </div>
